style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

:root {
  /* COLORS */
  --teal: #4d97a9;
  --purple: #855fb1;
  --dark-blue: #28283d;
  --gray-blue: #87879d;

  --footer-overlay: #4d97a9d3;

  --light-teal: #8fe3f9;
  --light-purple: #d9b8ff;
  --white: #fafafa;
  --border-outline: #87879d3d;
  /* MARGIN */
  --small-margin: 3rem;
  --medium-margin: 5rem;

  /* MOBILE-WIDTH */
  --mobile-width: 90%;
}

body {
  font-family: "Red Hat Display", sans-serif;
  background-color: var(--white);

  display: grid;
  place-items: center;
  overflow-y: scroll;
  overflow-x: hidden;
  min-width: 345px;
  min-height: 100vh;
}

h1,
h2,
.overline {
  font-weight: 900;
}

h1 {
  font-size: 4rem;
  line-height: 1;
}

h2 {
  font-size: 2.75rem;
}

.overline {
  letter-spacing: 4px;
}

p {
  font-size: 1.125rem;
}

button {
  padding: 1.25rem 2rem;
  border-radius: 50rem;
  border: none;
  font-family: inherit;
  font-weight: 900;
  color: var(--white);
  font-size: 1rem;
  margin: 0 0.5rem;
}

button:hover {
  cursor: pointer;
}

.download-button {
  background-color: var(--teal);
}

.download-button:hover {
  background-color: var(--light-teal);
}

.more-info-button {
  background-color: var(--purple);
}

.more-info-button:hover {
  background-color: var(--light-purple);
}

img {
  width: 100%;
  display: flex;
}

.logo-frame {
  margin-top: var(--small-margin);
}

.hero-container {
  width: 100%;
  margin-top: var(--small-margin);

  display: flex;
  justify-content: space-between;
}

.hero-container > .image-frame-left {
  transform: translateX(-2rem);
}

.hero-container > .image-frame-right {
  transform: translateX(2rem);
}

.cta-container {
  text-align: center;

  display: flex;
  justify-content: space-between;
  flex-flow: column nowrap;
  width: 30rem;
}

.step-icon-frame {
  margin-top: var(--medium-margin);
  transform: translateY(2rem);

  display: flex;
  flex-flow: column nowrap;
  align-items: center;
}

.step-icon-frame > hr {
  border: none;
  height: 5rem;
  border-left: 2px solid var(--border-outline);
}

.step-icon-frame > p {
  font-weight: 900;
  height: 4rem;
  width: 4rem;
  border-radius: 50rem;
  border: 1px solid var(--border-outline);
  background-color: var(--white);

  display: flex;
  align-items: center;
  justify-content: center;
}

main {
  display: grid;
  place-items: center;
}

.images-container {
  margin-top: var(--medium-margin);
  display: grid;
  grid-auto-flow: column;
  column-gap: 1.5rem;
}

.images-container img {
  border-radius: 0.5rem;
}

.images-container > .image-frame {
  width: 100%;
  max-width: 15.125rem;
}

section {
  margin-top: var(--medium-margin);
  text-align: center;
  max-width: 32rem;
  min-width: var(--mobile-width);
  height: 16rem;

  display: flex;
  flex-flow: column nowrap;
  justify-content: space-between;
  align-items: center;
}

section > h2 {
  width: 90%;
}

footer {
  width: 100%;
  height: 20rem;
  color: var(--white);

  background: linear-gradient(var(--footer-overlay), var(--footer-overlay)),
    url("assets/desktop/image-footer.jpg") no-repeat;

  background-size: cover;

  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: 1fr;
  place-items: center;
}

footer > h2 {
  width: 60%;
}

footer > p {
  width: 55%;

  min-width: 15rem;
  max-width: 55%;
}

footer > .download-button {
  background-color: var(--purple);
}

footer > .download-button:hover {
  background-color: var(--light-purple);
}

.tablet {
  display: none;
}

@media only screen and (max-width: 1100px) {
  html {
    font-size: 0.85em;
  }
}

@media only screen and (max-width: 1020px) {
  .hero-container {
    flex-flow: column nowrap;
    align-items: center;
  }

  .cta-container {
    margin-top: var(--medium-margin);
    height: 20rem;
  }
  .desktop {
    display: none;
  }

  .tablet {
    display: block;
  }
}

@media only screen and (max-width: 909px) {
  footer {
    grid-auto-flow: row;
    text-align: center;
    height: 30rem;
    background: linear-gradient(var(--footer-overlay), var(--footer-overlay)),
      url("assets/tablet/image-footer.jpg") no-repeat;
    background-size: cover;
    padding-top: 2rem;
  }

  .images-container {
    width: var(--mobile-width);
    column-gap: 0.5rem;
  }
}

@media only screen and (max-width: 819px) {
  .image-frame-mobile {
    transform: scale(1.05);
  }

  .images-container {
    grid-template-columns: repeat(2, 1fr);
    gap: 1rem;
    grid-auto-flow: row;
  }
}

@media only screen and (max-width: 519px) {
}

@media only screen and (max-width: 474px) {
  html {
    font-size: 0.75em;
  }

  .cta-container {
    width: var(--mobile-width);
  }
}

